created about section

--- a/index.html
+++ b/index.html
@@ -45,15 +45,44 @@
       </div>
     </nav><!-- /nav -->
 
-    <section id="showcase">
-      <div class="overlay"></div>
-      <div class="header container text-white text-center">
-        <h3 class="display-5">Modern Camping</h3>
+    <section id="showcase" class="d-flex align-items-center justify-content-center">
+      <div id="overlay"></div>
+      <div id="header" class="container text-white text-center">
+        <h3 class="display-5 mb-0">Modern Camping</h3>
         <h1 class="display-1">Aurora Grove</h1>
         <p class="lead d-none d-md-block">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, nostrum.</p>
-        <button class="btn btn-primary btn-lg">BOOK NOW</button>
-      </div>
+        <button id="book" class="btn btn-primary btn-lg px-5">BOOK NOW</button>
     </section><!-- /showcase -->
+
+    <section id="about">
+      <div class="container text-center mt-5">
+        <h2>You Show up, We Pitch the Tent!</h2>
+        <div class="row">
+
+          <div class="col-md-4 p-3">
+            <img class="img-fluid d-none d-md-inline" src="src/images/icons/tent.png" alt="Tent Icon">
+            <h3>Amenities You Want</h3>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur obcaecati natus debitis rem maxime
+              facilis excepturi fugit provident iure placeat.</p>
+          </div>
+
+          <div class="col-md-4 p-3">
+            <img class="img-fluid d-none d-md-inline" src="src/images/icons/campfire.png" alt="Campfire Icon">
+            <h3>Amenities You Want</h3>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur obcaecati natus debitis rem maxime
+              facilis excepturi fugit provident iure placeat.</p>
+          </div>
+
+          <div class="col-md-4 p-3">
+            <img class="img-fluid d-none d-md-inline" src="src/images/icons/nature.png" alt="Nature Icon">
+            <h3>Amenities You Want</h3>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur obcaecati natus debitis rem maxime
+              facilis excepturi fugit provident iure placeat.</p>
+          </div>
+
+        </div>
+      </div>
+    </section><!-- /about -->
 
     <script src="src/js/jquery.min.js"></script>
     <script src="src/js/popper.min.js"></script>
