adjusted top padding on sections for small screens

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <button id="book" class="btn btn-primary btn-lg px-5">BOOK NOW</button>
     </section><!-- /showcase -->
 
-    <section id="about" class="py-5 py-md-0 d-flex align-items-center">
+    <section id="about" class="d-flex align-items-center">
       <div class="container text-center">
-        <h2 class="mb-md-5">You Show up, We Pitch the Tent!</h2>
+        <h2 class="mb-4 mb-md-5">You Show up, We Pitch the Tent!</h2>
         <div class="row">
 
           <div class="col-md-4 p-3">
@@ -86,9 +86,9 @@
       </div>
     </section><!-- /about -->
 
-    <section id="explore" class="py-5 py-md-0 d-flex align-items-center">
+    <section id="explore" class="d-flex align-items-center">
       <div class="container text-center">
-        <h3 class="mb-3">We've Created A Camping Experience That's Turn Key and Hassle Free!</h3>
+        <h2 class="mb-5">We've Created A Hassle Free, Turn Key Camping Experience!</h2>
 
         <div class="row m-2">
 
