--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <a href="#explore" class="nav-link">Explore</a>
           </li>
           <li class="nav-item">
+            <a href="#chatter" class="nav-link">Chatter</a>
+          </li>
+          <li class="nav-item">
             <a href="#contact" class="nav-link">Contact</a>
           </li>
           <li class="nav-item">
@@ -57,7 +60,7 @@
 
     <section id="about" class="d-flex align-items-center">
       <div class="container text-center">
-        <h2 class="mb-4 mb-md-5">You Show up, We Pitch the Tent!</h2>
+        <h2 class="mb-4">You Show up, We Pitch the Tent!</h2>
         <div class="row">
 
           <div class="col-md-4 p-3">
@@ -88,7 +91,7 @@
 
     <section id="explore" class="d-flex align-items-center">
       <div class="container text-center">
-        <h2 class="mb-5">We've Created A Hassle Free, Turn Key Camping Experience!</h2>
+        <h2 class="mb-5 mb-lg-3">We've Created A Hassle Free, Turn Key Camping Experience!</h2>
 
         <div class="row m-2">
 
@@ -99,7 +102,7 @@
                 <h2 class="card-title text-primary">Experience</h2>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam deleniti
                   consequatur dicta laborum quas voluptas quos voluptatum dignissimos aliquid voluptatibus!</p>
-                  <a href="#" class="btn btn-outline-primary btn-lg">Go Somewhere</a>
+                <a href="#explore" class="btn btn-outline-primary btn-lg">Go Somewhere</a>
               </div>
             </div>
           </div>
@@ -111,7 +114,7 @@
                 <h2 class="card-title text-primary">Explore</h2>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam deleniti
                   consequatur dicta laborum quas voluptas quos voluptatum dignissimos aliquid voluptatibus!</p>
-                <a href="#" class="btn btn-outline-primary btn-lg">Go Somewhere</a>
+                <a href="#explore" class="btn btn-outline-primary btn-lg">Go Somewhere</a>
               </div>
             </div>
           </div>
@@ -119,6 +122,95 @@
         </div>
       </div>
     </section><!-- /explore -->
+
+    <section id="chatter" class="d-flex align-items-center">
+      <div class="container text-center">
+        <h2 class="mb-5">What Our Happy Campers Are Saying!</h2>
+
+        <div class="row">
+          <div class="col-md-4 my-2">
+            <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
+            <blockquote class="blockquote">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic non sunt debitis qui?</p>
+              <footer class="blockquote-footer">
+                Jack White
+              </footer>
+            </blockquote>
+          </div>
+
+          <div class="col-md-4 my-2">
+            <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
+            <blockquote class="blockquote">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic non sunt debitis qui?</p>
+              <footer class="blockquote-footer">
+                Josh Homme
+              </footer>
+            </blockquote>
+          </div>
+
+          <div class="col-md-4 my-2">
+            <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
+            <blockquote class="blockquote">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic non sunt debitis qui?</p>
+              <footer class="blockquote-footer">
+                Jesse Hughes
+              </footer>
+            </blockquote>
+          </div>
+        </div><!-- /row -->
+
+        <div class="row mt-5 text-left">
+
+          <div class="col-lg-7 mb-4">
+            <div id="mainCarousel" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="src/images/slider/coffee.png" alt="Coffee Photo">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="src/images/slider/fire.png" alt="Fire Photo">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="src/images/slider/trees.png" alt="Trees Photo">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="src/images/slider/caribou.png" alt="Caribou Photo">
+                </div>
+              </div>
+              <a href="#mainCarousel" class="carousel-control-prev" data-slide="prev" role="button">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a href="#mainCarousel" class="carousel-control-next" data-slide="next" role="button">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-5">
+            <h3>Camping Made Cozy</h3>
+            <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi id itaque necessitatibus?
+              Reprehenderit harum unde officiis alias consequuntur rem vero, in perferendis. Eveniet mollitia deleniti
+              magni accusamus perferendis magnam enim?</p>
+              <a href="#chatter">See For Yourself <i class="fa fa-arrow-right"></i></a>
+          </div>
+
+        </div><!-- /row -->
+
+      </div>
+    </section><!-- chatter -->
+
+    <section id="images" class="mt-5">
+      <div class="container text-center">
+        <h2>What Others Are Saying</h2>
+        <h5 class="text-primary">#AURORAGROVE</h5>
+      
+        <div class="row">
+      
+        </div>
+      </div>
+    </section><!-- /images -->
 
     <script src="src/js/jquery.min.js"></script>
     <script src="src/js/popper.min.js"></script>
