created images section

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi id itaque necessitatibus?
               Reprehenderit harum unde officiis alias consequuntur rem vero, in perferendis. Eveniet mollitia deleniti
               magni accusamus perferendis magnam enim?</p>
-              <a href="#chatter">See For Yourself <i class="fa fa-arrow-right"></i></a>
+            <a href="#chatter">See For Yourself <i class="fa fa-arrow-right"></i></a>
           </div>
 
         </div><!-- /row -->
@@ -204,10 +204,45 @@
     <section id="images" class="mt-5">
       <div class="container text-center">
         <h2>What Others Are Saying</h2>
-        <h5 class="text-primary">#AURORAGROVE</h5>
-      
+        <h5 class="text-primary mb-5">#AURORAGROVE</h5>
+
         <div class="row">
-      
+          <div class="col-6 col-lg-3 mb-4">
+            <img class="img-fluid" src="src/images/gallery/social1.png" alt="Social Images">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img class="img-fluid" src="src/images/gallery/social2.png" alt="Social Images">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img class="img-fluid" src="src/images/gallery/social3.png" alt="Social Images">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img class="img-fluid" src="src/images/gallery/social4.png" alt="Social Images">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img class="img-fluid" src="src/images/gallery/social5.png" alt="Social Images">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img class="img-fluid" src="src/images/gallery/social6.png" alt="Social Images">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img class="img-fluid" src="src/images/gallery/social7.png" alt="Social Images">
+          </div>
+          <div class="col-6 col-lg-3 mb-4">
+            <img class="img-fluid" src="src/images/gallery/social8.png" alt="Social Images">
+          </div>
+        </div>
+
+        <div class="row mt-4">
+          <div class="col">
+            <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
+            <blockquote class="blockquote">
+              <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit neque optio perferendis ipsam! Molestias, culpa. Culpa, ducimus illum! Iusto quisquam illo adipisci voluptate dolorum reprehenderit consequatur fuga quas reiciendis qui sunt, voluptas, ratione nisi sit repudiandae quasi temporibus necessitatibus laboriosam.</p>
+              <footer class="blockquote-footer">
+                Beck Hansen
+              </footer>
+            </blockquote>
+          </div>
         </div>
       </div>
     </section><!-- /images -->
