--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h3 class="display-5 mb-0">Modern Camping</h3>
         <h1 class="display-1">Aurora Grove</h1>
         <p class="lead d-none d-md-block">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, nostrum.</p>
-        <button id="book" class="btn btn-primary btn-lg px-5">BOOK NOW</button>
+        <button id="book" class="btn btn-primary btn-lg px-5 shadow-lg">BOOK NOW</button>
     </section><!-- /showcase -->
 
     <section id="about" class="d-flex align-items-center">
@@ -208,32 +208,32 @@
 
         <div class="row">
           <div class="col-6 col-lg-3 mb-4">
-            <img class="img-fluid" src="src/images/gallery/social1.png" alt="Social Images">
+            <img class="img-fluid shadow" src="src/images/gallery/social1.png" alt="Social Images">
           </div>
           <div class="col-6 col-lg-3 mb-4">
-            <img class="img-fluid" src="src/images/gallery/social2.png" alt="Social Images">
+            <img class="img-fluid shadow" src="src/images/gallery/social2.png" alt="Social Images">
           </div>
           <div class="col-6 col-lg-3 mb-4">
-            <img class="img-fluid" src="src/images/gallery/social3.png" alt="Social Images">
+            <img class="img-fluid shadow" src="src/images/gallery/social3.png" alt="Social Images">
           </div>
           <div class="col-6 col-lg-3 mb-4">
-            <img class="img-fluid" src="src/images/gallery/social4.png" alt="Social Images">
+            <img class="img-fluid shadow" src="src/images/gallery/social4.png" alt="Social Images">
           </div>
           <div class="col-6 col-lg-3 mb-4">
-            <img class="img-fluid" src="src/images/gallery/social5.png" alt="Social Images">
+            <img class="img-fluid shadow" src="src/images/gallery/social5.png" alt="Social Images">
           </div>
           <div class="col-6 col-lg-3 mb-4">
-            <img class="img-fluid" src="src/images/gallery/social6.png" alt="Social Images">
+            <img class="img-fluid shadow" src="src/images/gallery/social6.png" alt="Social Images">
           </div>
           <div class="col-6 col-lg-3 mb-4">
-            <img class="img-fluid" src="src/images/gallery/social7.png" alt="Social Images">
+            <img class="img-fluid shadow" src="src/images/gallery/social7.png" alt="Social Images">
           </div>
           <div class="col-6 col-lg-3 mb-4">
-            <img class="img-fluid" src="src/images/gallery/social8.png" alt="Social Images">
+            <img class="img-fluid shadow" src="src/images/gallery/social8.png" alt="Social Images">
           </div>
         </div>
 
-        <div class="row mt-4">
+        <div class="row my-5">
           <div class="col">
             <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
             <blockquote class="blockquote">
@@ -246,6 +246,25 @@
         </div>
       </div>
     </section><!-- /images -->
+
+    <section id="newsletter" class="py-5 bg-dark">
+      <div class="container text-center">
+        <h4 class="text-white">Join Our Newsletter for Deals, Updates and Offers</h4>
+
+        <div class="row mt-3">
+          <div class="col-10 col-sm-8 col-md-6 col-lg-4 mx-auto">
+            <form>
+              <div class="input-group">
+                <input class="form-control" type="text" name="news" id="news" placeholder="Your Email">
+                <div class="input-group-append">
+                  <button class="btn btn-primary">Join Now</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section><!-- /newsletter -->
 
     <script src="src/js/jquery.min.js"></script>
     <script src="src/js/popper.min.js"></script>
