--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#chatter" class="nav-link">Chatter</a>
           </li>
           <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
+            <a href="#footer" class="nav-link">Contact</a>
           </li>
           <li class="nav-item">
             <a href="#book" class="nav-link">Book</a>
@@ -265,6 +265,26 @@
         </div>
       </div>
     </section><!-- /newsletter -->
+
+    <footer id="footer" class="py-4 bg-secondary">
+      <ul class="nav text-center justify-content-center">
+        <li class="nav-item">
+          <a href="#footer" class="nav-link text-white">FAQ</a>
+        </li>
+        <li class="nav-item">
+          <a href="#footer" class="nav-link text-white">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a href="#explore" class="nav-link text-white">Explore</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contact" class="nav-link text-white">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a href="#book" class="nav-link text-white">Book Now</a>
+        </li>
+      </ul>
+    </footer><!-- /footer -->
 
     <script src="src/js/jquery.min.js"></script>
     <script src="src/js/popper.min.js"></script>
