made small correction on section comments

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div><!-- /row -->
 
       </div>
-    </section><!-- chatter -->
+    </section><!-- /chatter -->
 
     <section id="images" class="mt-5">
       <div class="container text-center">
