--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#footer" class="nav-link">Contact</a>
           </li>
           <li class="nav-item">
-            <a href="#book" class="nav-link">Book</a>
+            <a href="#book" class="nav-link" data-toggle="modal" data-target="#bookNowModal">Book</a>
           </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
         <h3 class="display-5 mb-0">Modern Camping</h3>
         <h1 class="display-1">Aurora Grove</h1>
         <p class="lead d-none d-md-block">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, nostrum.</p>
-        <button id="book" class="btn btn-primary btn-lg px-5 shadow-lg">BOOK NOW</button>
+        <button id="book" class="btn btn-primary btn-lg px-5 shadow-lg" data-toggle="modal" data-target="#bookNowModal">BOOK NOW</button>
     </section><!-- /showcase -->
 
     <section id="about" class="d-flex align-items-center">
@@ -281,10 +281,62 @@
           <a href="#contact" class="nav-link text-white">Contact</a>
         </li>
         <li class="nav-item">
-          <a href="#book" class="nav-link text-white">Book Now</a>
+          <a href="#" class="nav-link text-white" data-toggle="modal" data-target="#bookNowModal">Book Now</a>
         </li>
       </ul>
     </footer><!-- /footer -->
+
+    <!-- Booking Modal -->
+    <div class="modal fade" id="bookNowModal" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+          <div class="modal-header">
+            <h5 class="modal-title">New Booking</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div class="modal-body">
+            <p>Please fill out the new booking form and we will get back to you as soon as possible ya dingus! Jeez!</p>
+            <form>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input class="form-control" type="email" name="email" id="email" placeholder="drstevebrule@checkitout.com">
+              </div>
+              <div class="form-group">
+                <label for="numAdults">Number of Adults</label>
+                <select class="form-control" name="numAdults" id="numAdults">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="numchildren">Number of Children</label>
+                <select class="form-control" name="numChildren" id="numChildren">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="requests">Additional Requests</label>
+                <textarea class="form-control" name="requests" id="requests" rows="3"></textarea>
+              </div>
+              <div class="d-flex justify-content-end mt-4">
+                <button class="btn btn-primary mr-2">Submit Request</button>
+                <button class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </div><!-- /booking modal -->
 
     <script src="src/js/jquery.min.js"></script>
     <script src="src/js/popper.min.js"></script>
