--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi id itaque necessitatibus?
               Reprehenderit harum unde officiis alias consequuntur rem vero, in perferendis. Eveniet mollitia deleniti
               magni accusamus perferendis magnam enim?</p>
-            <a href="#chatter">See For Yourself <i class="fa fa-arrow-right"></i></a>
+            <a class="btn btn-outline-primary btn-lg" href="#chatter">See For Yourself <i class="fa fa-arrow-right"></i></a>
           </div>
 
         </div><!-- /row -->
