--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Aurora Grove</title>
   </head>
 
-  <body id="home">
+  <body id="home" data-spy="scroll" data-target="#navbar">
 
     <nav id="navbar" class="navbar navbar-expand-md navbar-dark fixed-top">
       <a class="navbar-brand" href="#">
